LDEV-5227 Update Apache POI source code to 4.1.2